--- a/action.yml
+++ b/action.yml
@@ -73,4 +73,4 @@ runs:
         DISCUSSION_TITLE: ${{ github.event.discussion.title }}
         DISCUSSION_BODY: ${{ github.event.discussion.body }}
         USER_URL: ${{ github.event.discussion.user.html_url }}
-        USER_NAME: ${{ github.event.discussion.user.login }
+        USER_NAME: ${{ github.event.discussion.user.login }}
